@@ -606,6 +606,18 @@ Package=<4>
 
 ###############################################################################
 
+Project: "odbcquery"=.\src\agent\subagents\odbcquery\odbcquery.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+}}}
+
+###############################################################################
+
 Project: "pgsql"=.\src\server\dbdrv\pgsql\pgsql.dsp - Package Owner=<4>
 
 Package=<5>
