@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=187
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDD_EDIT_TRAP
+Resource2=IDD_CREATE_TG
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_NEW_OBJECT_TOOL
-Resource5=IDD_DESKTOP_SAVE_AS
+Resource4=IDD_DCI_SCHEDULE
+Resource5=IDD_OBJECT_NETSRV_GENERAL
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_NEW_USER
+Resource6=IDD_OBJECT_GENERAL
 Class11=CProgressDialog
-Resource7=IDA_SERVER_CFG_EDITOR
+Resource7=IDA_GRAPH
 Class12=CAddrEntryDlg
-Resource8=IDD_DATA_QUERY
+Resource8=IDD_DCI_TRANSFORM
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_SELECT_AGENT_PARAM
+Resource20=IDD_EDIT_TRAP
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_CHANGE_PASSWORD
+Resource22=IDD_OBJTOOL_COLUMNS
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_CREATE_NETSRV
+Resource24=IDD_SELECT_INTERNAL_ITEM
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_SUBMAP_BKGND
+Resource27=IDD_REMOVE_TEMPLATE
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDA_ALARM_BROWSER
-Resource32=IDD_CHANGE_IP
+Resource31=IDA_MDI_DEFAULT
+Resource32=IDD_OBJTOOL_GENERAL
 Class29=CUserSelectDlg
-Resource33=IDD_EDIT_IP_SUBNET
+Resource33=IDD_EDIT_VARIABLE
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_OBJECT_NETSRV_GENERAL
-Resource36=IDD_SNMP_WALK
+Resource35=IDD_SELECT_AGENT_PARAM
+Resource36=IDD_CHANGE_IP
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_OBJTOOL_COLUMNS
+Resource38=IDD_OBJTOOL_OPTIONS
 Class33=CGroupPropDlg
-Resource39=IDD_EDIT_RULE_SCRIPT
-Resource40=IDA_OBJECT_TOOLS_EDITOR
-Resource41=IDD_CREATE_MP
+Resource39=IDD_ADD_DCI
+Resource40=IDA_SERVER_CFG_EDITOR
+Resource41=IDD_DISCOVERY_TARGETS
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDD_EDIT_VARIABLE
+Resource48=IDD_GRAPH_PROP_DATA
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_GROUP_PROPERTIES
+Resource50=IDD_SELECT_USER
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDD_OBJECT_SECURITY
+Resource52=IDD_OBJECT_CAPS
 Class48=CObjectSelDlg
-Resource53=IDD_CREATE_VPNC
-Resource54=IDD_EDIT_RULE_SEVERITY
+Resource53=IDD_LASTVAL_PROP
+Resource54=IDD_EDIT_RULE_COMMENT
 Class49=CRuleCommentDlg
-Resource55=IDA_MDI_DEFAULT
+Resource55=IDD_CREATE_MP
 Class50=CEventSelDlg
-Resource56=IDD_ACTION_PROPERTIES
+Resource56=IDD_EDIT_RULE_ALARM
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_SET_PASSWORD
+Resource58=IDD_NEW_USER
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDD_DCI_SCHEDULE
+Resource62=IDD_OBJECT_VPNC_GENERAL
 Class52=CRuleSeverityDlg
-Resource63=IDD_AGENT_CONFIG
+Resource63=IDD_OBJECT_COND_DATA
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_SELECT_USER
+Resource65=IDD_REQUEST_PROCESSING
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_DCI_COLLECTION
-Resource70=IDD_THRESHOLD
+Resource69=IDD_USER_PROPERTIES
+Resource70=IDD_SET_PASSWORD
 Class57=CNewActionDlg
-Resource71=IDD_REQUEST_PROCESSING
+Resource71=IDD_EDIT_EVENT
 Class58=CEditActionDlg
-Resource72=IDD_NEW_ACTION
+Resource72=IDD_EDIT_RULE_SEVERITY
 Class59=CActionSelDlg
-Resource73=IDD_USER_PROPERTIES
+Resource73=IDD_OBJECT_SECURITY
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_OBJECT_CAPS
+Resource76=IDD_ABOUTBOX
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_SAVE_AGENT_CFG
+Resource77=IDD_CREATE_VPNC
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_COND_DCI_PROP
-Resource84=IDD_OBJECT_NODE_POLL
+Resource83=IDD_OBJECT_COND_SCRIPT
+Resource84=IDD_INPUT_BOX
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_DCI_THRESHOLDS
-Resource86=IDR_MAINFRAME
+Resource85=IDD_GROUP_PROPERTIES
+Resource86=IDD_ADDR_ENTRY
 Class68=CTrapEditor
-Resource87=IDD_EDIT_TRAP_ARG
-Resource88=IDD_DCI_TRANSFORM
-Resource89=IDD_EDIT_RULE_ALARM
+Resource87=IDD_CREATE_TEMPLATE
+Resource88=IDD_SELECT_ACTION
+Resource89=IDD_SELECT_EVENT
 Class69=CDataQueryDlg
-Resource90=IDD_CP_GENERAL
+Resource90=IDD_OBJECT_PRESENTATION
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_OBJECT_PRESENTATION
-Resource93=IDD_EDIT_EVENT
+Resource92=IDD_SELECT_OBJECT
+Resource93=IDA_DATA_VIEW
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_CREATE_TG
+Resource94=IDD_CREATE_CONTAINER
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDA_NETMAP
+Resource98=IDA_OBJECT_BROWSER
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_SELECT_INTERNAL_ITEM
+Resource129=IDD_DATA_QUERY
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,76 +270,76 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDA_DC_EDITOR
-Resource141=IDA_OBJECT_BROWSER
-Resource142=IDD_LASTVAL_PROP
-Resource143=IDM_VIEW_SPECIFIC
-Resource144=IDD_OBJECT_COND_GENERAL
-Resource145=IDD_REMOVE_TEMPLATE
-Resource146=IDA_DATA_VIEW
-Resource147=IDD_OBJECT_NODE_GENERAL
-Resource148=IDD_CREATE_TEMPLATE
-Resource149=IDD_ABOUTBOX
-Resource150=IDA_TRAP_EDITOR
-Resource151=IDA_PACKAGE_MGR
-Resource152=IDD_OBJECT_GENERAL
-Resource153=IDD_OBJECT_VPNC_GENERAL
-Resource154=IDD_EDIT_RULE_COMMENT
-Resource155=IDD_OBJECT_RELATIONS
-Resource156=IDD_DISCOVERY_RANGES
-Resource157=IDA_AGENT_CONFIG_MANAGER
-Resource158=IDA_EVENT_EDITOR
-Resource159=IDM_CONTEXT
-Resource160=IDD_GRAPH_PROP_DATA
-Resource161=IDD_MIB_BROWSER
-Resource162=IDA_GRAPH
-Resource163=IDD_SELECT_ACTION
-Resource164=IDD_ADD_DCI
-Resource165=IDD_OBJECT_COND_DATA
-Resource166=IDD_DISCOVERY_TARGETS
-Resource167=IDD_CREATE_CONTAINER
-Resource168=IDA_EPP
-Resource169=IDA_AGENT_CFG_EDITOR
-Resource170=IDD_DCI_DATA_EXPORT
-Resource171=IDA_SCRIPT_MANAGER
+Resource140=IDA_LAST_VALUES
+Resource141=IDD_SELECT_MP
+Resource142=IDD_DESKTOP_SAVE_AS
+Resource143=IDM_CONTEXT
+Resource144=IDD_SUBMAP_BKGND
+Resource145=IDD_NEW_OBJECT_TOOL
+Resource146=IDA_DC_EDITOR
+Resource147=IDA_AGENT_CONFIG_MANAGER
+Resource148=IDD_CREATE_NODE
+Resource149=IDA_SCRIPT_MANAGER
+Resource150=IDA_NETMAP
+Resource151=IDA_ACTION_EDITOR
+Resource152=IDD_OBJECT_NODE_GENERAL
+Resource153=IDD_DCI_DATA_EXPORT
+Resource154=IDD_THRESHOLD
+Resource155=IDD_CREATE_NETSRV
+Resource156=IDD_EDIT_RULE_SCRIPT
+Resource157=IDA_OBJECT_TOOLS_EDITOR
+Resource158=IDA_EPP
+Resource159=IDM_VIEW_SPECIFIC
+Resource160=IDD_OBJECT_RELATIONS
+Resource161=IDD_DCI_COLLECTION
+Resource162=IDA_EVENT_EDITOR
+Resource163=IDD_CP_GENERAL
+Resource164=IDD_OBJECT_COND_GENERAL
+Resource165=IDD_CREATE_CONDITION
+Resource166=IDD_AGENT_CONFIG
+Resource167=IDD_NEW_ACTION
+Resource168=IDR_MAINFRAME
+Resource169=IDA_PACKAGE_MGR
+Resource170=IDD_GRAPH_PROP_SETTINGS
+Resource171=IDA_AGENT_CFG_EDITOR
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_SELECT_OBJECT
-Resource173=IDD_SELECT_MP
+Resource172=IDD_DCI_THRESHOLDS
+Resource173=IDD_DISCOVERY_RANGES
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDD_OBJECT_STATUS
+Resource174=IDD_EDIT_IP_SUBNET
 Class127=CAddDCIDlg
-Resource175=IDA_LAST_VALUES
+Resource175=IDA_TRAP_EDITOR
 Class128=CCondDCIPropDlg
-Resource176=IDA_ACTION_EDITOR
+Resource176=IDA_ALARM_BROWSER
 Class129=CAgentConfigMgr
-Resource177=IDD_INPUT_BOX
-Resource178=IDD_OBJECT_COND_SCRIPT
+Resource177=IDD_EDIT_TRAP_ARG
+Resource178=IDD_CHANGE_PASSWORD
 Class130=CAgentCfgDlg
 Class131=CObjectCommentsEditor
-Resource179=IDD_CREATE_CONDITION
+Resource179=IDD_SNMP_WALK
 Class132=CRuleScriptDlg
 Class133=CDetailsView
-Resource180=IDD_ADDR_ENTRY
+Resource180=IDD_DISCOVERY_GENERAL
 Class134=CDiscoveryPropGeneral
-Resource181=IDD_GRAPH_PROP_SETTINGS
+Resource181=IDD_OBJECT_NODE_POLL
 Class135=CDiscoveryPropTargets
-Resource182=IDD_DISCOVERY_GENERAL
+Resource182=IDD_COND_DCI_PROP
 Class136=CDiscoveryPropAddrList
-Resource183=IDD_SELECT_EVENT
+Resource183=IDD_MIB_BROWSER
 Class138=CObjectView
 Class139=CObjectOverview
 Class140=CAlarmView
 Class141=CObjectDepView
-Resource184=IDD_CREATE_NODE
+Resource184=IDD_ACTION_PROPERTIES
 Class137=CObjectBrowser
 Class142=CCreateMPDlg
-Resource185=IDD_OBJTOOL_OPTIONS
+Resource185=IDD_OBJECT_STATUS
 Class143=CSelectMPDlg
-Resource186=IDD_OBJTOOL_GENERAL
+Resource186=IDD_SAVE_AGENT_CFG
 Class144=CTrapSelDlg
 Resource187=IDD_SELECT_TRAP
 
