@@ -2836,16 +2836,16 @@ BEGIN
     GROUPBOX        "Options",IDC_STATIC,7,55,171,41
 END
 
-IDD_SELECT_TRAP DIALOGEX 0, 0, 316, 177
+IDD_SELECT_TRAP DIALOGEX 0, 0, 406, 178
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Select Traps"
 FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "List2",IDC_LIST_TRAPS,"SysListView32",LVS_REPORT | 
-                    LVS_SHOWSELALWAYS | WS_TABSTOP,7,7,246,163,
+                    LVS_SHOWSELALWAYS | WS_TABSTOP,7,7,333,164,
                     WS_EX_CLIENTEDGE
-    DEFPUSHBUTTON   "OK",IDOK,259,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,259,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,349,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,349,24,50,14
 END
 
 
@@ -3511,9 +3511,9 @@ BEGIN
     IDD_SELECT_TRAP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 309
+        RIGHTMARGIN, 399
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 171
     END
 END
 #endif    // APSTUDIO_INVOKED
